# rust-graphql-demo

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
mocks/: building_api.json
src/: main.rs  mem_tracing.rs  schema.rs
src/datasource/: rooms.rs
src/loaders/: mod.rs  room_loader.rs
src/resolvers/: mod.rs  resolve_building.rs  resolve_building_list.rs  resolve_hello.rs  resolve_room.rs
