[package]
name = "rust-graphql-demo"
version = "0.1.0"
authors = ["Robin Seifert <darkguardsman@github.com>"]
edition = "2024"

[package.metadata.scripts]
run-local="cargo run --features local"

[features]
local=[]

[dependencies]
async-graphql = { version = "7.0.17" }
async-graphql-axum = { version = "7.0.17" }
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.6" }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.28"
anyhow = "1.0.100"
env_logger = "0.11.8"