[package]
name = "server"
version = "0.1.0"
authors = ["Robin Seifert <darkguardsman@github.com>"]
edition = "2024"

[package.metadata.scripts]
run-local="cargo run --features local"
pod-build="podman build -t rust-graph-demo ."
pod-start="podman run -d -p 3000:3000 --memory 1G --cpus 1.5 --name rust-graph-demo --env-file ./docker.env rust-graph-demo"
pod-stats="podman stats rust-graph-demo"
pod-stop="podman stop rust-graph-demo"
pod-clean="podman rm rust-graph-demo"

[features]
local=[]

# https://doc.rust-lang.org/beta/cargo/reference/profiles.html
#[profile.release]
#debug = true # Only enable for local perf testing, as this will take the release from 12MB to 200MB

[dependencies]
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tracing-attributes = "=0.1.28"# required to fix async-graphql tracing
async-graphql = { version = "=7.0.17", features = ["dataloader", "tracing-futures", "tracing", "opentelemetry"] }
async-graphql-axum = { version = "=7.0.17" }
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.6" }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.28"
anyhow = "1.0.100"
env_logger = "0.11.8"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "charset", "json", "gzip", "brotli", "zstd", "deflate", "rustls-tls-native-roots"] }
async-trait = "0.1.89"
serde_json = "1.0.145"
byte-unit = "5.1.6"
alloc-metrics = "0.1.1"

[dev-dependencies]
blondie = "0.5.2"
flamegraph = "0.6.9"
